--- a/templates/newserie.html
+++ b/templates/newserie.html
@@ -17,9 +17,9 @@ padding:5px;
 
 	<form method='POST'>
 	<table>
-	<tr><td>Name: </td><td><input type="text" name="name"></td></tr>
-	<tr><td>Episode: </td><td><input type="text" name="last_episode" maxlength="2"></td></tr>
-	<tr><td>Link: </td><td><input type="text" name="link" size="100"></td></tr>
+	<tr><td>Name: </td><td><input type="text" name="name" value="{{name}}"></td></tr>
+	<tr><td>Episode: </td><td><input type="text" name="last_episode" maxlength="2" value="{{last_episode}}"></td></tr>
+	<tr><td>Link: </td><td><input type="text" name="link" size="100" value="{{link}}"></td></tr>
 	</table>
 
 	<p></p>
