--- a/templates/editserie.html
+++ b/templates/editserie.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<head>
-	<title>edition d'un lien</title>
-<style>
-table, th, td
-{
-}
-th, td
-{
-padding:5px;
-}
-</style>
-</head>
-
-<body>
+{% extends "layout.html" %}
+{% block content %}
 	<h1>Mise à jour d'un lien</h1>
 
 	<form action="/{{name}}" method='POST'>
@@ -27,7 +14,6 @@ padding:5px;
 	<table>
 	<tr><td><input type="submit" name="cancel" value="Annuler"></td></tr>
 	<tr><td><input type="submit" name="valider" value="Valider"></td></tr>
-	<tr><td><input type="submit" name="home" value="Accueil"></td></tr>
 	</form>
 	<form action="/" method='POST'>
 	<tr><td><input type="submit" name="delete" value="Effacer" onclick="return confirm('Are you sure?')"></td></tr>
@@ -37,5 +23,4 @@ padding:5px;
 	{% if message %}
 	<h2>{{ message }}</h2>
 	{% endif %}
-</body>
-</html>
+{% endblock %}
