added favico (python one)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
 	<title>zone telechargement status</title>
 	<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='stylesheet.css') }}"/>
+	<link rel="shorcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
 </head>
 
 <body>
