update of messages so that it is in french

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,9 +23,12 @@
 	{% block content %}
 	{% endblock %}
 		{% if message %}
+			<h2>messages:</h2>
+			<ul>
 			{% for line in message %}
-				<h2>{{ line }}</h2>
+				<li>{{ line }}</li>
 			{% endfor %}
+			</ul>
 		{% endif %}
 	</div>
 </body>
