added code for changing entries in edit page

--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,6 @@
 
 	<p></p>
 	<form method='POST'>
-		<input type="submit" name="check_now" value="check">
+		<input type="submit" name="check_now" value="vérifier">
 	</form>
 {% endblock %}
